Node usando Mongo no Docker

--- a/node-mongo-docker/views/index.ejs
+++ b/node-mongo-docker/views/index.ejs
@@ -4,6 +4,8 @@
 <head>
   <title>App - Node Js</title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/bootstrap-theme.css">
 </head>
 
 <body>
@@ -11,7 +13,16 @@
     <h1><%= index.title %></h1>
     <p><%= index.phrase %></p>
     <img src="<%= index.image %>" />
+    <br>
+    <br>
+    <br>
+    <div class="text-center">
+      <form method="GET" action="/register">
+        <input type="submit" class="btn btn-primary text-center" value="Começar" >
+      </form>
+
   </center>
+  </div>
 </body>
 
 </html>
