--- a/node-mongo-docker/views/user/list.ejs
+++ b/node-mongo-docker/views/user/list.ejs
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="UTF-8">
-    <title>User Register</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.css">
 
+<head>
+    <title>Users List</title>
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/bootstrap-theme.css">
+    <link rel="stylesheet" href="/css/image.css">
 </head>
 
 <body class="container">
-    <h1 class="text-center">User List</h1>
+    <h1 class="text-center">Users</h1>
 
-    <ul>
-        <% users.forEach(function(user) { %>
-        <li><%= user.name %> - <%= user.email %></li>
-        <% }); %>
-    </ul>
+    <table>
+
+        <ul>
+            <% users.forEach(function(user) { %>
+            <li><%= user.name %> </li>
+            <li><%= user.email %> </li>
+            <img class="img-url" src="<%= user.profileImageUrl %>" />
+            <hr>
+            <% }); %>
+        </ul>
+    </table>
 
     <br>
     <br>
     <br>
 
     <div class="text-center">
-        <a class="btn btn-secondary" href="/register"><i class="fa fa-list-alt"></i> Register</a>
+        <form method="GET" action="/register">
+            <input type="submit" class="btn btn-primary text-center" value="Register">
+        </form>
     </div>
-
 
 </body>
 
