--- a/node-mongo-docker/views/user/list.ejs
+++ b/node-mongo-docker/views/user/list.ejs
@@ -16,6 +16,7 @@
 
         <ul>
             <% users.forEach(function(user) { %>
+            <li><%= user._id %> </li>   
             <li><%= user.name %> </li>
             <li><%= user.email %> </li>
             <img class="img-url" src="<%= user.profileImageUrl %>" />
